// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parser properties of type  Limited Concept  1`] = `
LimitedTest {
  "$$owner": TestParserModel {
    "$$owner": null,
    "$$propertyIndex": undefined,
    "$$propertyName": "",
    "$id": "ID-1",
    "$typename": "TestParserModel",
    "_PI_lim": [Circular],
    "_PI_parts": null,
    "_PI_prim": null,
    "_PI_primWith": null,
    "_PI_ref": null,
  },
  "$$propertyIndex": undefined,
  "$$propertyName": "lim",
  "$id": "ID-5",
  "$typename": "LimitedTest",
  "_PI_limitedNonOpt": LimitedNonOptional {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "limitedNonOpt",
    "$id": "ID-2",
    "$typename": "LimitedNonOptional",
    "_PI_other": PiElementReference {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "other",
      "_PI_pathname": Array [
        "FIRST",
      ],
      "_PI_referred": OtherLimited {
        "$$owner": null,
        "$$propertyIndex": undefined,
        "$$propertyName": "",
        "$id": "ID-4",
        "$typename": "OtherLimited",
        "_PI_name": "FIRST",
      },
      "typeName": "OtherLimited",
    },
    "_PI_otherMulti": Array [
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "otherMulti",
        "_PI_pathname": Array [
          "SECOND",
        ],
        "_PI_referred": OtherLimited {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-5",
          "$typename": "OtherLimited",
          "_PI_name": "SECOND",
        },
        "typeName": "OtherLimited",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "otherMulti",
        "_PI_pathname": Array [
          "FIRST",
        ],
        "_PI_referred": OtherLimited {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-4",
          "$typename": "OtherLimited",
          "_PI_name": "FIRST",
        },
        "typeName": "OtherLimited",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 2,
        "$$propertyName": "otherMulti",
        "_PI_pathname": Array [
          "FIRST",
        ],
        "_PI_referred": OtherLimited {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-4",
          "$typename": "OtherLimited",
          "_PI_name": "FIRST",
        },
        "typeName": "OtherLimited",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 3,
        "$$propertyName": "otherMulti",
        "_PI_pathname": Array [
          "SECOND",
        ],
        "_PI_referred": OtherLimited {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-5",
          "$typename": "OtherLimited",
          "_PI_name": "SECOND",
        },
        "typeName": "OtherLimited",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 4,
        "$$propertyName": "otherMulti",
        "_PI_pathname": Array [
          "SECOND",
        ],
        "_PI_referred": OtherLimited {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-5",
          "$typename": "OtherLimited",
          "_PI_name": "SECOND",
        },
        "typeName": "OtherLimited",
      },
    ],
    "_PI_visMulti": Array [
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "visMulti",
        "_PI_pathname": Array [
          "+",
        ],
        "_PI_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-1",
          "$typename": "VisibilityKind",
          "_PI_name": "+",
        },
        "typeName": "VisibilityKind",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "visMulti",
        "_PI_pathname": Array [
          "+",
        ],
        "_PI_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-1",
          "$typename": "VisibilityKind",
          "_PI_name": "+",
        },
        "typeName": "VisibilityKind",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 2,
        "$$propertyName": "visMulti",
        "_PI_pathname": Array [
          "+",
        ],
        "_PI_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-1",
          "$typename": "VisibilityKind",
          "_PI_name": "+",
        },
        "typeName": "VisibilityKind",
      },
    ],
    "_PI_visMultiWithExtra": Array [
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "visMultiWithExtra",
        "_PI_pathname": Array [
          "-",
        ],
        "_PI_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-2",
          "$typename": "VisibilityKind",
          "_PI_name": "-",
        },
        "typeName": "VisibilityKind",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "visMultiWithExtra",
        "_PI_pathname": Array [
          "+",
        ],
        "_PI_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-1",
          "$typename": "VisibilityKind",
          "_PI_name": "+",
        },
        "typeName": "VisibilityKind",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 2,
        "$$propertyName": "visMultiWithExtra",
        "_PI_pathname": Array [
          "-",
        ],
        "_PI_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-2",
          "$typename": "VisibilityKind",
          "_PI_name": "-",
        },
        "typeName": "VisibilityKind",
      },
    ],
    "_PI_visWithExtra": PiElementReference {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "visWithExtra",
      "_PI_pathname": Array [
        "-",
      ],
      "_PI_referred": VisibilityKind {
        "$$owner": null,
        "$$propertyIndex": undefined,
        "$$propertyName": "",
        "$id": "ID-2",
        "$typename": "VisibilityKind",
        "_PI_name": "-",
      },
      "typeName": "VisibilityKind",
    },
    "_PI_visibility": PiElementReference {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "visibility",
      "_PI_pathname": Array [
        "+",
      ],
      "_PI_referred": VisibilityKind {
        "$$owner": null,
        "$$propertyIndex": undefined,
        "$$propertyName": "",
        "$id": "ID-1",
        "$typename": "VisibilityKind",
        "_PI_name": "+",
      },
      "typeName": "VisibilityKind",
    },
    "parse_location": PiParseLocation {
      "column": 19,
      "line": 2,
    },
  },
  "_PI_limitedOpt": LimitedOptional {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "limitedOpt",
    "$id": "ID-3",
    "$typename": "LimitedOptional",
    "_PI_visMulti": Array [
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "visMulti",
        "_PI_pathname": Array [
          "#",
        ],
        "_PI_referred": null,
        "typeName": "VisibilityKind",
      },
    ],
    "_PI_visMultiWithExtra": Array [
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "visMultiWithExtra",
        "_PI_pathname": Array [
          "-",
        ],
        "_PI_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-2",
          "$typename": "VisibilityKind",
          "_PI_name": "-",
        },
        "typeName": "VisibilityKind",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "visMultiWithExtra",
        "_PI_pathname": Array [
          "-",
        ],
        "_PI_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-2",
          "$typename": "VisibilityKind",
          "_PI_name": "-",
        },
        "typeName": "VisibilityKind",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 2,
        "$$propertyName": "visMultiWithExtra",
        "_PI_pathname": Array [
          "-",
        ],
        "_PI_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-2",
          "$typename": "VisibilityKind",
          "_PI_name": "-",
        },
        "typeName": "VisibilityKind",
      },
    ],
    "_PI_visWithExtra": PiElementReference {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "visWithExtra",
      "_PI_pathname": Array [
        "-",
      ],
      "_PI_referred": VisibilityKind {
        "$$owner": null,
        "$$propertyIndex": undefined,
        "$$propertyName": "",
        "$id": "ID-2",
        "$typename": "VisibilityKind",
        "_PI_name": "-",
      },
      "typeName": "VisibilityKind",
    },
    "_PI_visibility": PiElementReference {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "visibility",
      "_PI_pathname": Array [
        "+",
      ],
      "_PI_referred": VisibilityKind {
        "$$owner": null,
        "$$propertyIndex": undefined,
        "$$propertyName": "",
        "$id": "ID-1",
        "$typename": "VisibilityKind",
        "_PI_name": "+",
      },
      "typeName": "VisibilityKind",
    },
    "parse_location": PiParseLocation {
      "column": 16,
      "line": 12,
    },
  },
  "_PI_limitedOpt2": LimitedOptional {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "limitedOpt2",
    "$id": "ID-4",
    "$typename": "LimitedOptional",
    "_PI_visMulti": Array [],
    "_PI_visMultiWithExtra": Array [],
    "parse_location": PiParseLocation {
      "column": 17,
      "line": 18,
    },
  },
  "_PI_name": "anyNameWillDo",
  "parse_location": PiParseLocation {
    "column": 1,
    "line": 1,
  },
}
`;

exports[`Parser properties of type  Part  1`] = `
PartsTest {
  "$$owner": TestParserModel {
    "$$owner": null,
    "$$propertyIndex": undefined,
    "$$propertyName": "",
    "$id": "ID-1",
    "$typename": "TestParserModel",
    "_PI_lim": null,
    "_PI_parts": [Circular],
    "_PI_prim": null,
    "_PI_primWith": null,
    "_PI_ref": null,
  },
  "$$propertyIndex": undefined,
  "$$propertyName": "parts",
  "$id": "ID-7",
  "$typename": "PartsTest",
  "_PI_directParts": WithDirectParts {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "directParts",
    "$id": "ID-6",
    "$typename": "WithDirectParts",
    "_PI_optList": Array [],
    "_PI_optPart": null,
    "_PI_part": PartConcept {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "part",
      "$id": "ID-2",
      "$typename": "PartConcept",
      "_PI_content": "stringLiteral",
      "_PI_optContent": 10,
      "_PI_visibility": PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": undefined,
        "$$propertyName": "visibility",
        "_PI_pathname": Array [
          "+",
        ],
        "_PI_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-1",
          "$typename": "VisibilityKind",
          "_PI_name": "+",
        },
        "typeName": "VisibilityKind",
      },
      "parse_location": PiParseLocation {
        "column": 25,
        "line": 3,
      },
    },
    "_PI_partList": Array [
      PartConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "partList",
        "$id": "ID-3",
        "$typename": "PartConcept",
        "_PI_content": "otherString",
        "_PI_optContent": 0,
        "_PI_visibility": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "visibility",
          "_PI_pathname": Array [
            "#",
          ],
          "_PI_referred": VisibilityKind {
            "$$owner": null,
            "$$propertyIndex": undefined,
            "$$propertyName": "",
            "$id": "ID-3",
            "$typename": "VisibilityKind",
            "_PI_name": "#",
          },
          "typeName": "VisibilityKind",
        },
        "parse_location": PiParseLocation {
          "column": 25,
          "line": 9,
        },
      },
      PartConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "partList",
        "$id": "ID-4",
        "$typename": "PartConcept",
        "_PI_content": "stringLiteralXXX",
        "_PI_optContent": 123,
        "_PI_visibility": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "visibility",
          "_PI_pathname": Array [
            "-",
          ],
          "_PI_referred": VisibilityKind {
            "$$owner": null,
            "$$propertyIndex": undefined,
            "$$propertyName": "",
            "$id": "ID-2",
            "$typename": "VisibilityKind",
            "_PI_name": "-",
          },
          "typeName": "VisibilityKind",
        },
        "parse_location": PiParseLocation {
          "column": 25,
          "line": 13,
        },
      },
      PartConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 2,
        "$$propertyName": "partList",
        "$id": "ID-5",
        "$typename": "PartConcept",
        "_PI_content": "stringLiteralYYY",
        "_PI_optContent": 0,
        "_PI_visibility": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "visibility",
          "_PI_pathname": Array [
            "+",
          ],
          "_PI_referred": VisibilityKind {
            "$$owner": null,
            "$$propertyIndex": undefined,
            "$$propertyName": "",
            "$id": "ID-1",
            "$typename": "VisibilityKind",
            "_PI_name": "+",
          },
          "typeName": "VisibilityKind",
        },
        "parse_location": PiParseLocation {
          "column": 25,
          "line": 17,
        },
      },
    ],
    "parse_location": PiParseLocation {
      "column": 14,
      "line": 2,
    },
  },
  "_PI_name": "myName",
  "_PI_partsOfParts": null,
  "parse_location": PiParseLocation {
    "column": 1,
    "line": 1,
  },
}
`;

exports[`Parser properties of type  Part and Sub Parts  1`] = `
PartsTest {
  "$$owner": TestParserModel {
    "$$owner": null,
    "$$propertyIndex": undefined,
    "$$propertyName": "",
    "$id": "ID-1",
    "$typename": "TestParserModel",
    "_PI_lim": null,
    "_PI_parts": [Circular],
    "_PI_prim": null,
    "_PI_primWith": null,
    "_PI_ref": null,
  },
  "$$propertyIndex": undefined,
  "$$propertyName": "parts",
  "$id": "ID-39",
  "$typename": "PartsTest",
  "_PI_directParts": WithDirectParts {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "directParts",
    "$id": "ID-6",
    "$typename": "WithDirectParts",
    "_PI_optList": Array [],
    "_PI_optPart": null,
    "_PI_part": PartConcept {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "part",
      "$id": "ID-2",
      "$typename": "PartConcept",
      "_PI_content": "stringLiteral",
      "_PI_optContent": 10,
      "_PI_visibility": PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": undefined,
        "$$propertyName": "visibility",
        "_PI_pathname": Array [
          "+",
        ],
        "_PI_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-1",
          "$typename": "VisibilityKind",
          "_PI_name": "+",
        },
        "typeName": "VisibilityKind",
      },
      "parse_location": PiParseLocation {
        "column": 25,
        "line": 3,
      },
    },
    "_PI_partList": Array [
      PartConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "partList",
        "$id": "ID-3",
        "$typename": "PartConcept",
        "_PI_content": "otherString",
        "_PI_optContent": 0,
        "_PI_visibility": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "visibility",
          "_PI_pathname": Array [
            "#",
          ],
          "_PI_referred": VisibilityKind {
            "$$owner": null,
            "$$propertyIndex": undefined,
            "$$propertyName": "",
            "$id": "ID-3",
            "$typename": "VisibilityKind",
            "_PI_name": "#",
          },
          "typeName": "VisibilityKind",
        },
        "parse_location": PiParseLocation {
          "column": 25,
          "line": 9,
        },
      },
      PartConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "partList",
        "$id": "ID-4",
        "$typename": "PartConcept",
        "_PI_content": "stringLiteralXXX",
        "_PI_optContent": 123,
        "_PI_visibility": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "visibility",
          "_PI_pathname": Array [
            "-",
          ],
          "_PI_referred": VisibilityKind {
            "$$owner": null,
            "$$propertyIndex": undefined,
            "$$propertyName": "",
            "$id": "ID-2",
            "$typename": "VisibilityKind",
            "_PI_name": "-",
          },
          "typeName": "VisibilityKind",
        },
        "parse_location": PiParseLocation {
          "column": 25,
          "line": 13,
        },
      },
      PartConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 2,
        "$$propertyName": "partList",
        "$id": "ID-5",
        "$typename": "PartConcept",
        "_PI_content": "stringLiteralYYY",
        "_PI_optContent": 0,
        "_PI_visibility": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "visibility",
          "_PI_pathname": Array [
            "+",
          ],
          "_PI_referred": VisibilityKind {
            "$$owner": null,
            "$$propertyIndex": undefined,
            "$$propertyName": "",
            "$id": "ID-1",
            "$typename": "VisibilityKind",
            "_PI_name": "+",
          },
          "typeName": "VisibilityKind",
        },
        "parse_location": PiParseLocation {
          "column": 25,
          "line": 17,
        },
      },
    ],
    "parse_location": PiParseLocation {
      "column": 14,
      "line": 2,
    },
  },
  "_PI_name": "myName",
  "_PI_partsOfParts": WithSubSubParts {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "partsOfParts",
    "$id": "ID-38",
    "$typename": "WithSubSubParts",
    "_PI_optList": Array [],
    "_PI_optPart": null,
    "_PI_part": SubConcept {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "part",
      "$id": "ID-15",
      "$typename": "SubConcept",
      "_PI_listSub": Array [
        WithDirectParts {
          "$$owner": [Circular],
          "$$propertyIndex": 0,
          "$$propertyName": "listSub",
          "$id": "ID-11",
          "$typename": "WithDirectParts",
          "_PI_optList": Array [],
          "_PI_optPart": null,
          "_PI_part": PartConcept {
            "$$owner": [Circular],
            "$$propertyIndex": undefined,
            "$$propertyName": "part",
            "$id": "ID-9",
            "$typename": "PartConcept",
            "_PI_content": "stringLiteralFGT",
            "_PI_optContent": 10,
            "_PI_visibility": PiElementReference {
              "$$owner": [Circular],
              "$$propertyIndex": undefined,
              "$$propertyName": "visibility",
              "_PI_pathname": Array [
                "+",
              ],
              "_PI_referred": VisibilityKind {
                "$$owner": null,
                "$$propertyIndex": undefined,
                "$$propertyName": "",
                "$id": "ID-1",
                "$typename": "VisibilityKind",
                "_PI_name": "+",
              },
              "typeName": "VisibilityKind",
            },
            "parse_location": PiParseLocation {
              "column": 38,
              "line": 36,
            },
          },
          "_PI_partList": Array [
            PartConcept {
              "$$owner": [Circular],
              "$$propertyIndex": 0,
              "$$propertyName": "partList",
              "$id": "ID-10",
              "$typename": "PartConcept",
              "_PI_content": "otherStringZZZ",
              "_PI_optContent": 0,
              "_PI_visibility": PiElementReference {
                "$$owner": [Circular],
                "$$propertyIndex": undefined,
                "$$propertyName": "visibility",
                "_PI_pathname": Array [
                  "#",
                ],
                "_PI_referred": VisibilityKind {
                  "$$owner": null,
                  "$$propertyIndex": undefined,
                  "$$propertyName": "",
                  "$id": "ID-3",
                  "$typename": "VisibilityKind",
                  "_PI_name": "#",
                },
                "typeName": "VisibilityKind",
              },
              "parse_location": PiParseLocation {
                "column": 37,
                "line": 42,
              },
            },
          ],
          "parse_location": PiParseLocation {
            "column": 29,
            "line": 35,
          },
        },
        WithDirectParts {
          "$$owner": [Circular],
          "$$propertyIndex": 1,
          "$$propertyName": "listSub",
          "$id": "ID-14",
          "$typename": "WithDirectParts",
          "_PI_optList": Array [],
          "_PI_optPart": null,
          "_PI_part": PartConcept {
            "$$owner": [Circular],
            "$$propertyIndex": undefined,
            "$$propertyName": "part",
            "$id": "ID-12",
            "$typename": "PartConcept",
            "_PI_content": "stringLiteralZZZ",
            "_PI_optContent": 1045,
            "_PI_visibility": PiElementReference {
              "$$owner": [Circular],
              "$$propertyIndex": undefined,
              "$$propertyName": "visibility",
              "_PI_pathname": Array [
                "-",
              ],
              "_PI_referred": VisibilityKind {
                "$$owner": null,
                "$$propertyIndex": undefined,
                "$$propertyName": "",
                "$id": "ID-2",
                "$typename": "VisibilityKind",
                "_PI_name": "-",
              },
              "typeName": "VisibilityKind",
            },
            "parse_location": PiParseLocation {
              "column": 38,
              "line": 48,
            },
          },
          "_PI_partList": Array [
            PartConcept {
              "$$owner": [Circular],
              "$$propertyIndex": 0,
              "$$propertyName": "partList",
              "$id": "ID-13",
              "$typename": "PartConcept",
              "_PI_content": "otherString",
              "_PI_optContent": 0,
              "_PI_visibility": PiElementReference {
                "$$owner": [Circular],
                "$$propertyIndex": undefined,
                "$$propertyName": "visibility",
                "_PI_pathname": Array [
                  "#",
                ],
                "_PI_referred": VisibilityKind {
                  "$$owner": null,
                  "$$propertyIndex": undefined,
                  "$$propertyName": "",
                  "$id": "ID-3",
                  "$typename": "VisibilityKind",
                  "_PI_name": "#",
                },
                "typeName": "VisibilityKind",
              },
              "parse_location": PiParseLocation {
                "column": 37,
                "line": 54,
              },
            },
          ],
          "parse_location": PiParseLocation {
            "column": 29,
            "line": 47,
          },
        },
      ],
      "_PI_normalSub": WithDirectParts {
        "$$owner": [Circular],
        "$$propertyIndex": undefined,
        "$$propertyName": "normalSub",
        "$id": "ID-8",
        "$typename": "WithDirectParts",
        "_PI_optList": Array [],
        "_PI_optPart": null,
        "_PI_part": PartConcept {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "part",
          "$id": "ID-7",
          "$typename": "PartConcept",
          "_PI_content": "stringLiteral",
          "_PI_optContent": 10,
          "_PI_visibility": PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": undefined,
            "$$propertyName": "visibility",
            "_PI_pathname": Array [
              "+",
            ],
            "_PI_referred": VisibilityKind {
              "$$owner": null,
              "$$propertyIndex": undefined,
              "$$propertyName": "",
              "$id": "ID-1",
              "$typename": "VisibilityKind",
              "_PI_name": "+",
            },
            "typeName": "VisibilityKind",
          },
          "parse_location": PiParseLocation {
            "column": 46,
            "line": 26,
          },
        },
        "_PI_partList": Array [],
        "parse_location": PiParseLocation {
          "column": 32,
          "line": 25,
        },
      },
      "_PI_optListSub": Array [],
      "_PI_optionalSub": null,
      "parse_location": PiParseLocation {
        "column": 15,
        "line": 24,
      },
    },
    "_PI_partList": Array [
      SubConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "partList",
        "$id": "ID-28",
        "$typename": "SubConcept",
        "_PI_listSub": Array [
          WithDirectParts {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "listSub",
            "$id": "ID-27",
            "$typename": "WithDirectParts",
            "_PI_optList": Array [],
            "_PI_optPart": null,
            "_PI_part": PartConcept {
              "$$owner": [Circular],
              "$$propertyIndex": undefined,
              "$$propertyName": "part",
              "$id": "ID-26",
              "$typename": "PartConcept",
              "_PI_content": "stringLiteral",
              "_PI_optContent": 10,
              "_PI_visibility": PiElementReference {
                "$$owner": [Circular],
                "$$propertyIndex": undefined,
                "$$propertyName": "visibility",
                "_PI_pathname": Array [
                  "+",
                ],
                "_PI_referred": VisibilityKind {
                  "$$owner": null,
                  "$$propertyIndex": undefined,
                  "$$propertyName": "",
                  "$id": "ID-1",
                  "$typename": "VisibilityKind",
                  "_PI_name": "+",
                },
                "typeName": "VisibilityKind",
              },
              "parse_location": PiParseLocation {
                "column": 30,
                "line": 113,
              },
            },
            "_PI_partList": Array [],
            "parse_location": PiParseLocation {
              "column": 21,
              "line": 112,
            },
          },
        ],
        "_PI_normalSub": WithDirectParts {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "normalSub",
          "$id": "ID-20",
          "$typename": "WithDirectParts",
          "_PI_optList": Array [],
          "_PI_optPart": null,
          "_PI_part": PartConcept {
            "$$owner": [Circular],
            "$$propertyIndex": undefined,
            "$$propertyName": "part",
            "$id": "ID-16",
            "$typename": "PartConcept",
            "_PI_content": "stringLiteral",
            "_PI_optContent": 10,
            "_PI_visibility": PiElementReference {
              "$$owner": [Circular],
              "$$propertyIndex": undefined,
              "$$propertyName": "visibility",
              "_PI_pathname": Array [
                "+",
              ],
              "_PI_referred": VisibilityKind {
                "$$owner": null,
                "$$propertyIndex": undefined,
                "$$propertyName": "",
                "$id": "ID-1",
                "$typename": "VisibilityKind",
                "_PI_name": "+",
              },
              "typeName": "VisibilityKind",
            },
            "parse_location": PiParseLocation {
              "column": 42,
              "line": 66,
            },
          },
          "_PI_partList": Array [
            PartConcept {
              "$$owner": [Circular],
              "$$propertyIndex": 0,
              "$$propertyName": "partList",
              "$id": "ID-17",
              "$typename": "PartConcept",
              "_PI_content": "otherString",
              "_PI_optContent": 0,
              "_PI_visibility": PiElementReference {
                "$$owner": [Circular],
                "$$propertyIndex": undefined,
                "$$propertyName": "visibility",
                "_PI_pathname": Array [
                  "#",
                ],
                "_PI_referred": VisibilityKind {
                  "$$owner": null,
                  "$$propertyIndex": undefined,
                  "$$propertyName": "",
                  "$id": "ID-3",
                  "$typename": "VisibilityKind",
                  "_PI_name": "#",
                },
                "typeName": "VisibilityKind",
              },
              "parse_location": PiParseLocation {
                "column": 41,
                "line": 72,
              },
            },
            PartConcept {
              "$$owner": [Circular],
              "$$propertyIndex": 1,
              "$$propertyName": "partList",
              "$id": "ID-18",
              "$typename": "PartConcept",
              "_PI_content": "stringLiteralXXX",
              "_PI_optContent": 123,
              "_PI_visibility": PiElementReference {
                "$$owner": [Circular],
                "$$propertyIndex": undefined,
                "$$propertyName": "visibility",
                "_PI_pathname": Array [
                  "-",
                ],
                "_PI_referred": VisibilityKind {
                  "$$owner": null,
                  "$$propertyIndex": undefined,
                  "$$propertyName": "",
                  "$id": "ID-2",
                  "$typename": "VisibilityKind",
                  "_PI_name": "-",
                },
                "typeName": "VisibilityKind",
              },
              "parse_location": PiParseLocation {
                "column": 41,
                "line": 77,
              },
            },
            PartConcept {
              "$$owner": [Circular],
              "$$propertyIndex": 2,
              "$$propertyName": "partList",
              "$id": "ID-19",
              "$typename": "PartConcept",
              "_PI_content": "stringLiteralYYY",
              "_PI_optContent": 0,
              "_PI_visibility": PiElementReference {
                "$$owner": [Circular],
                "$$propertyIndex": undefined,
                "$$propertyName": "visibility",
                "_PI_pathname": Array [
                  "+",
                ],
                "_PI_referred": VisibilityKind {
                  "$$owner": null,
                  "$$propertyIndex": undefined,
                  "$$propertyName": "",
                  "$id": "ID-1",
                  "$typename": "VisibilityKind",
                  "_PI_name": "+",
                },
                "typeName": "VisibilityKind",
              },
              "parse_location": PiParseLocation {
                "column": 41,
                "line": 82,
              },
            },
          ],
          "parse_location": PiParseLocation {
            "column": 31,
            "line": 65,
          },
        },
        "_PI_optListSub": Array [],
        "_PI_optionalSub": WithDirectParts {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "optionalSub",
          "$id": "ID-25",
          "$typename": "WithDirectParts",
          "_PI_optList": Array [],
          "_PI_optPart": null,
          "_PI_part": PartConcept {
            "$$owner": [Circular],
            "$$propertyIndex": undefined,
            "$$propertyName": "part",
            "$id": "ID-21",
            "$typename": "PartConcept",
            "_PI_content": "stringLiteral",
            "_PI_optContent": 10,
            "_PI_visibility": PiElementReference {
              "$$owner": [Circular],
              "$$propertyIndex": undefined,
              "$$propertyName": "visibility",
              "_PI_pathname": Array [
                "+",
              ],
              "_PI_referred": VisibilityKind {
                "$$owner": null,
                "$$propertyIndex": undefined,
                "$$propertyName": "",
                "$id": "ID-1",
                "$typename": "VisibilityKind",
                "_PI_name": "+",
              },
              "typeName": "VisibilityKind",
            },
            "parse_location": PiParseLocation {
              "column": 42,
              "line": 89,
            },
          },
          "_PI_partList": Array [
            PartConcept {
              "$$owner": [Circular],
              "$$propertyIndex": 0,
              "$$propertyName": "partList",
              "$id": "ID-22",
              "$typename": "PartConcept",
              "_PI_content": "otherString",
              "_PI_optContent": 0,
              "_PI_visibility": PiElementReference {
                "$$owner": [Circular],
                "$$propertyIndex": undefined,
                "$$propertyName": "visibility",
                "_PI_pathname": Array [
                  "#",
                ],
                "_PI_referred": VisibilityKind {
                  "$$owner": null,
                  "$$propertyIndex": undefined,
                  "$$propertyName": "",
                  "$id": "ID-3",
                  "$typename": "VisibilityKind",
                  "_PI_name": "#",
                },
                "typeName": "VisibilityKind",
              },
              "parse_location": PiParseLocation {
                "column": 41,
                "line": 95,
              },
            },
            PartConcept {
              "$$owner": [Circular],
              "$$propertyIndex": 1,
              "$$propertyName": "partList",
              "$id": "ID-23",
              "$typename": "PartConcept",
              "_PI_content": "stringLiteralXXX",
              "_PI_optContent": 123,
              "_PI_visibility": PiElementReference {
                "$$owner": [Circular],
                "$$propertyIndex": undefined,
                "$$propertyName": "visibility",
                "_PI_pathname": Array [
                  "-",
                ],
                "_PI_referred": VisibilityKind {
                  "$$owner": null,
                  "$$propertyIndex": undefined,
                  "$$propertyName": "",
                  "$id": "ID-2",
                  "$typename": "VisibilityKind",
                  "_PI_name": "-",
                },
                "typeName": "VisibilityKind",
              },
              "parse_location": PiParseLocation {
                "column": 41,
                "line": 100,
              },
            },
            PartConcept {
              "$$owner": [Circular],
              "$$propertyIndex": 2,
              "$$propertyName": "partList",
              "$id": "ID-24",
              "$typename": "PartConcept",
              "_PI_content": "stringLiteralYYY",
              "_PI_optContent": 0,
              "_PI_visibility": PiElementReference {
                "$$owner": [Circular],
                "$$propertyIndex": undefined,
                "$$propertyName": "visibility",
                "_PI_pathname": Array [
                  "+",
                ],
                "_PI_referred": VisibilityKind {
                  "$$owner": null,
                  "$$propertyIndex": undefined,
                  "$$propertyName": "",
                  "$id": "ID-1",
                  "$typename": "VisibilityKind",
                  "_PI_name": "+",
                },
                "typeName": "VisibilityKind",
              },
              "parse_location": PiParseLocation {
                "column": 41,
                "line": 105,
              },
            },
          ],
          "parse_location": PiParseLocation {
            "column": 33,
            "line": 88,
          },
        },
        "parse_location": PiParseLocation {
          "column": 17,
          "line": 64,
        },
      },
      SubConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "partList",
        "$id": "ID-37",
        "$typename": "SubConcept",
        "_PI_listSub": Array [
          WithDirectParts {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "listSub",
            "$id": "ID-34",
            "$typename": "WithDirectParts",
            "_PI_optList": Array [],
            "_PI_optPart": null,
            "_PI_part": PartConcept {
              "$$owner": [Circular],
              "$$propertyIndex": undefined,
              "$$propertyName": "part",
              "$id": "ID-33",
              "$typename": "PartConcept",
              "_PI_content": "stringLiteral",
              "_PI_optContent": 10,
              "_PI_visibility": PiElementReference {
                "$$owner": [Circular],
                "$$propertyIndex": undefined,
                "$$propertyName": "visibility",
                "_PI_pathname": Array [
                  "+",
                ],
                "_PI_referred": VisibilityKind {
                  "$$owner": null,
                  "$$propertyIndex": undefined,
                  "$$propertyName": "",
                  "$id": "ID-1",
                  "$typename": "VisibilityKind",
                  "_PI_name": "+",
                },
                "typeName": "VisibilityKind",
              },
              "parse_location": PiParseLocation {
                "column": 34,
                "line": 141,
              },
            },
            "_PI_partList": Array [],
            "parse_location": PiParseLocation {
              "column": 25,
              "line": 140,
            },
          },
        ],
        "_PI_normalSub": WithDirectParts {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "normalSub",
          "$id": "ID-30",
          "$typename": "WithDirectParts",
          "_PI_optList": Array [],
          "_PI_optPart": null,
          "_PI_part": PartConcept {
            "$$owner": [Circular],
            "$$propertyIndex": undefined,
            "$$propertyName": "part",
            "$id": "ID-29",
            "$typename": "PartConcept",
            "_PI_content": "stringLiteral",
            "_PI_optContent": 10,
            "_PI_visibility": PiElementReference {
              "$$owner": [Circular],
              "$$propertyIndex": undefined,
              "$$propertyName": "visibility",
              "_PI_pathname": Array [
                "+",
              ],
              "_PI_referred": VisibilityKind {
                "$$owner": null,
                "$$propertyIndex": undefined,
                "$$propertyName": "",
                "$id": "ID-1",
                "$typename": "VisibilityKind",
                "_PI_name": "+",
              },
              "typeName": "VisibilityKind",
            },
            "parse_location": PiParseLocation {
              "column": 30,
              "line": 124,
            },
          },
          "_PI_partList": Array [],
          "parse_location": PiParseLocation {
            "column": 31,
            "line": 123,
          },
        },
        "_PI_optListSub": Array [
          WithDirectParts {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "optListSub",
            "$id": "ID-36",
            "$typename": "WithDirectParts",
            "_PI_optList": Array [],
            "_PI_optPart": null,
            "_PI_part": PartConcept {
              "$$owner": [Circular],
              "$$propertyIndex": undefined,
              "$$propertyName": "part",
              "$id": "ID-35",
              "$typename": "PartConcept",
              "_PI_content": "stringLit",
              "_PI_optContent": 1440,
              "_PI_visibility": PiElementReference {
                "$$owner": [Circular],
                "$$propertyIndex": undefined,
                "$$propertyName": "visibility",
                "_PI_pathname": Array [
                  "+",
                ],
                "_PI_referred": VisibilityKind {
                  "$$owner": null,
                  "$$propertyIndex": undefined,
                  "$$propertyName": "",
                  "$id": "ID-1",
                  "$typename": "VisibilityKind",
                  "_PI_name": "+",
                },
                "typeName": "VisibilityKind",
              },
              "parse_location": PiParseLocation {
                "column": 34,
                "line": 150,
              },
            },
            "_PI_partList": Array [],
            "parse_location": PiParseLocation {
              "column": 25,
              "line": 149,
            },
          },
        ],
        "_PI_optionalSub": WithDirectParts {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "optionalSub",
          "$id": "ID-32",
          "$typename": "WithDirectParts",
          "_PI_optList": Array [],
          "_PI_optPart": null,
          "_PI_part": PartConcept {
            "$$owner": [Circular],
            "$$propertyIndex": undefined,
            "$$propertyName": "part",
            "$id": "ID-31",
            "$typename": "PartConcept",
            "_PI_content": "stringLiteral",
            "_PI_optContent": 10,
            "_PI_visibility": PiElementReference {
              "$$owner": [Circular],
              "$$propertyIndex": undefined,
              "$$propertyName": "visibility",
              "_PI_pathname": Array [
                "#",
              ],
              "_PI_referred": VisibilityKind {
                "$$owner": null,
                "$$propertyIndex": undefined,
                "$$propertyName": "",
                "$id": "ID-3",
                "$typename": "VisibilityKind",
                "_PI_name": "#",
              },
              "typeName": "VisibilityKind",
            },
            "parse_location": PiParseLocation {
              "column": 30,
              "line": 132,
            },
          },
          "_PI_partList": Array [],
          "parse_location": PiParseLocation {
            "column": 33,
            "line": 131,
          },
        },
        "parse_location": PiParseLocation {
          "column": 17,
          "line": 122,
        },
      },
    ],
    "parse_location": PiParseLocation {
      "column": 9,
      "line": 23,
    },
  },
  "parse_location": PiParseLocation {
    "column": 1,
    "line": 1,
  },
}
`;

exports[`Parser properties of type  Part with Optionals present 1`] = `
PartsTest {
  "$$owner": TestParserModel {
    "$$owner": null,
    "$$propertyIndex": undefined,
    "$$propertyName": "",
    "$id": "ID-1",
    "$typename": "TestParserModel",
    "_PI_lim": null,
    "_PI_parts": [Circular],
    "_PI_prim": null,
    "_PI_primWith": null,
    "_PI_ref": null,
  },
  "$$propertyIndex": undefined,
  "$$propertyName": "parts",
  "$id": "ID-10",
  "$typename": "PartsTest",
  "_PI_directParts": WithDirectParts {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "directParts",
    "$id": "ID-9",
    "$typename": "WithDirectParts",
    "_PI_optList": Array [
      PartConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "optList",
        "$id": "ID-7",
        "$typename": "PartConcept",
        "_PI_content": "stringLiteral",
        "_PI_optContent": 10,
        "_PI_visibility": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "visibility",
          "_PI_pathname": Array [
            "+",
          ],
          "_PI_referred": VisibilityKind {
            "$$owner": null,
            "$$propertyIndex": undefined,
            "$$propertyName": "",
            "$id": "ID-1",
            "$typename": "VisibilityKind",
            "_PI_name": "+",
          },
          "typeName": "VisibilityKind",
        },
        "parse_location": PiParseLocation {
          "column": 24,
          "line": 28,
        },
      },
      PartConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "optList",
        "$id": "ID-8",
        "$typename": "PartConcept",
        "_PI_content": "stringLiteralYYY",
        "_PI_optContent": 0,
        "_PI_visibility": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "visibility",
          "_PI_pathname": Array [
            "+",
          ],
          "_PI_referred": VisibilityKind {
            "$$owner": null,
            "$$propertyIndex": undefined,
            "$$propertyName": "",
            "$id": "ID-1",
            "$typename": "VisibilityKind",
            "_PI_name": "+",
          },
          "typeName": "VisibilityKind",
        },
        "parse_location": PiParseLocation {
          "column": 25,
          "line": 32,
        },
      },
    ],
    "_PI_optPart": PartConcept {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "optPart",
      "$id": "ID-3",
      "$typename": "PartConcept",
      "_PI_content": "stringLiteral",
      "_PI_optContent": 10,
      "_PI_visibility": PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": undefined,
        "$$propertyName": "visibility",
        "_PI_pathname": Array [
          "+",
        ],
        "_PI_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-1",
          "$typename": "VisibilityKind",
          "_PI_name": "+",
        },
        "typeName": "VisibilityKind",
      },
      "parse_location": PiParseLocation {
        "column": 24,
        "line": 9,
      },
    },
    "_PI_part": PartConcept {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "part",
      "$id": "ID-2",
      "$typename": "PartConcept",
      "_PI_content": "stringLiteral",
      "_PI_optContent": 10,
      "_PI_visibility": PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": undefined,
        "$$propertyName": "visibility",
        "_PI_pathname": Array [
          "+",
        ],
        "_PI_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-1",
          "$typename": "VisibilityKind",
          "_PI_name": "+",
        },
        "typeName": "VisibilityKind",
      },
      "parse_location": PiParseLocation {
        "column": 25,
        "line": 3,
      },
    },
    "_PI_partList": Array [
      PartConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "partList",
        "$id": "ID-4",
        "$typename": "PartConcept",
        "_PI_content": "otherString",
        "_PI_optContent": 0,
        "_PI_visibility": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "visibility",
          "_PI_pathname": Array [
            "#",
          ],
          "_PI_referred": VisibilityKind {
            "$$owner": null,
            "$$propertyIndex": undefined,
            "$$propertyName": "",
            "$id": "ID-3",
            "$typename": "VisibilityKind",
            "_PI_name": "#",
          },
          "typeName": "VisibilityKind",
        },
        "parse_location": PiParseLocation {
          "column": 25,
          "line": 15,
        },
      },
      PartConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "partList",
        "$id": "ID-5",
        "$typename": "PartConcept",
        "_PI_content": "stringLiteralXXX",
        "_PI_optContent": 123,
        "_PI_visibility": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "visibility",
          "_PI_pathname": Array [
            "-",
          ],
          "_PI_referred": VisibilityKind {
            "$$owner": null,
            "$$propertyIndex": undefined,
            "$$propertyName": "",
            "$id": "ID-2",
            "$typename": "VisibilityKind",
            "_PI_name": "-",
          },
          "typeName": "VisibilityKind",
        },
        "parse_location": PiParseLocation {
          "column": 25,
          "line": 19,
        },
      },
      PartConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 2,
        "$$propertyName": "partList",
        "$id": "ID-6",
        "$typename": "PartConcept",
        "_PI_content": "stringLiteralYYY",
        "_PI_optContent": 0,
        "_PI_visibility": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "visibility",
          "_PI_pathname": Array [
            "+",
          ],
          "_PI_referred": VisibilityKind {
            "$$owner": null,
            "$$propertyIndex": undefined,
            "$$propertyName": "",
            "$id": "ID-1",
            "$typename": "VisibilityKind",
            "_PI_name": "+",
          },
          "typeName": "VisibilityKind",
        },
        "parse_location": PiParseLocation {
          "column": 25,
          "line": 23,
        },
      },
    ],
    "parse_location": PiParseLocation {
      "column": 14,
      "line": 2,
    },
  },
  "_PI_name": "myName",
  "_PI_partsOfParts": null,
  "parse_location": PiParseLocation {
    "column": 1,
    "line": 1,
  },
}
`;

exports[`Parser properties of type  Primitive  1`] = `
PrimitivesTest {
  "$$owner": TestParserModel {
    "$$owner": null,
    "$$propertyIndex": undefined,
    "$$propertyName": "",
    "$id": "ID-1",
    "$typename": "TestParserModel",
    "_PI_lim": null,
    "_PI_parts": null,
    "_PI_prim": [Circular],
    "_PI_primWith": null,
    "_PI_ref": null,
  },
  "$$propertyIndex": undefined,
  "$$propertyName": "prim",
  "$id": "ID-8",
  "$typename": "PrimitivesTest",
  "_PI_name": "someName",
  "_PI_prim": Prim {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "prim",
    "$id": "ID-2",
    "$typename": "Prim",
    "_PI_primBoolean": true,
    "_PI_primIdentifier": "EenNaam",
    "_PI_primListBoolean": Array [
      true,
      false,
      true,
      false,
    ],
    "_PI_primListIdentifier": Array [
      "EenNaam",
      "NogEenNaam",
      "EnNogEen",
    ],
    "_PI_primListNumber": Array [
      10,
      20,
    ],
    "_PI_primListString": Array [
      "TEKST",
      "TEKST",
    ],
    "_PI_primNumber": 19,
    "_PI_primString": "TEKST",
    "parse_location": PiParseLocation {
      "column": 5,
      "line": 3,
    },
  },
  "_PI_primExtra": PrimsWithExtraText {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "primExtra",
    "$id": "ID-3",
    "$typename": "PrimsWithExtraText",
    "_PI_primBooleanWithExtra": false,
    "_PI_primIdentifierWithExtra": "EenNaam",
    "_PI_primListBooleanWithExtra": Array [
      false,
      true,
      false,
    ],
    "_PI_primListIdentifierWithExtra": Array [
      "EenNaam",
      "NogEenNaam",
      "EnNogEen",
    ],
    "_PI_primListNumberWithExtra": Array [
      67,
      98,
    ],
    "_PI_primListStringWithExtra": Array [
      "TEKST",
      "TEXT",
    ],
    "_PI_primNumberWithExtra": 45,
    "_PI_primStringWithExtra": "TEKST",
    "parse_location": PiParseLocation {
      "column": 5,
      "line": 14,
    },
  },
  "_PI_separator": PrimsWithSeparator {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "separator",
    "$id": "ID-4",
    "$typename": "PrimsWithSeparator",
    "_PI_primListBooleanSeparator": Array [
      true,
      false,
    ],
    "_PI_primListIdentifierSeparator": Array [
      "EenNaam",
      "NogEenNaam",
      "EnNogEen",
    ],
    "_PI_primListNumberSeparator": Array [
      56,
      67,
      78,
    ],
    "_PI_primListStringSeparator": Array [
      "iets",
      "wat",
    ],
    "parse_location": PiParseLocation {
      "column": 11,
      "line": 22,
    },
  },
  "_PI_separatorOpt": PrimsWithSeparator {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "separatorOpt",
    "$id": "ID-6",
    "$typename": "PrimsWithSeparator",
    "_PI_primListBooleanSeparator": Array [
      true,
      false,
    ],
    "_PI_primListIdentifierSeparator": Array [],
    "_PI_primListNumberSeparator": Array [
      56,
      67,
      78,
    ],
    "_PI_primListStringSeparator": Array [],
    "parse_location": PiParseLocation {
      "column": 14,
      "line": 32,
    },
  },
  "_PI_terminator": PrimsWithTerminator {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "terminator",
    "$id": "ID-5",
    "$typename": "PrimsWithTerminator",
    "_PI_primListBooleanTerminator": Array [
      true,
    ],
    "_PI_primListIdentifierTerminator": Array [
      "EenNaam",
    ],
    "_PI_primListNumberTerminator": Array [
      30,
    ],
    "_PI_primListStringTerminator": Array [
      "iets",
    ],
    "parse_location": PiParseLocation {
      "column": 12,
      "line": 27,
    },
  },
  "_PI_terminatorOpt": PrimsWithTerminator {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "terminatorOpt",
    "$id": "ID-7",
    "$typename": "PrimsWithTerminator",
    "_PI_primListBooleanTerminator": Array [],
    "_PI_primListIdentifierTerminator": Array [
      "EenNaam",
    ],
    "_PI_primListNumberTerminator": Array [],
    "_PI_primListStringTerminator": Array [
      "iets",
    ],
    "parse_location": PiParseLocation {
      "column": 15,
      "line": 37,
    },
  },
  "parse_location": PiParseLocation {
    "column": 1,
    "line": 1,
  },
}
`;

exports[`Parser properties of type  Primitive with Keyword projection  1`] = `
PrimsWithKeywordTest {
  "$$owner": TestParserModel {
    "$$owner": null,
    "$$propertyIndex": undefined,
    "$$propertyName": "",
    "$id": "ID-1",
    "$typename": "TestParserModel",
    "_PI_lim": null,
    "_PI_parts": null,
    "_PI_prim": null,
    "_PI_primWith": [Circular],
    "_PI_ref": null,
  },
  "$$propertyIndex": undefined,
  "$$propertyName": "primWith",
  "$id": "ID-10",
  "$typename": "PrimsWithKeywordTest",
  "_PI_name": "myName",
  "_PI_primWith": Array [
    PrimKeyword {
      "$$owner": [Circular],
      "$$propertyIndex": 0,
      "$$propertyName": "primWith",
      "$id": "ID-2",
      "$typename": "PrimKeyword",
      "_PI_primBoolean": true,
      "parse_location": PiParseLocation {
        "column": 6,
        "line": 3,
      },
    },
    PrimKeyword {
      "$$owner": [Circular],
      "$$propertyIndex": 1,
      "$$propertyName": "primWith",
      "$id": "ID-3",
      "$typename": "PrimKeyword",
      "_PI_primBoolean": false,
      "parse_location": PiParseLocation {
        "column": 9,
        "line": 4,
      },
    },
    PrimKeyword {
      "$$owner": [Circular],
      "$$propertyIndex": 2,
      "$$propertyName": "primWith",
      "$id": "ID-4",
      "$typename": "PrimKeyword",
      "_PI_primBoolean": true,
      "parse_location": PiParseLocation {
        "column": 6,
        "line": 5,
      },
    },
    PrimKeyword {
      "$$owner": [Circular],
      "$$propertyIndex": 3,
      "$$propertyName": "primWith",
      "$id": "ID-5",
      "$typename": "PrimKeyword",
      "_PI_primBoolean": false,
      "parse_location": PiParseLocation {
        "column": 9,
        "line": 6,
      },
    },
    PrimKeyword {
      "$$owner": [Circular],
      "$$propertyIndex": 4,
      "$$propertyName": "primWith",
      "$id": "ID-6",
      "$typename": "PrimKeyword",
      "_PI_primBoolean": true,
      "parse_location": PiParseLocation {
        "column": 6,
        "line": 7,
      },
    },
    PrimKeyword {
      "$$owner": [Circular],
      "$$propertyIndex": 5,
      "$$propertyName": "primWith",
      "$id": "ID-7",
      "$typename": "PrimKeyword",
      "_PI_primBoolean": false,
      "parse_location": PiParseLocation {
        "column": 9,
        "line": 8,
      },
    },
    PrimKeyword {
      "$$owner": [Circular],
      "$$propertyIndex": 6,
      "$$propertyName": "primWith",
      "$id": "ID-8",
      "$typename": "PrimKeyword",
      "_PI_primBoolean": false,
      "parse_location": PiParseLocation {
        "column": 6,
        "line": 9,
      },
    },
    PrimKeyword {
      "$$owner": [Circular],
      "$$propertyIndex": 7,
      "$$propertyName": "primWith",
      "$id": "ID-9",
      "$typename": "PrimKeyword",
      "_PI_primBoolean": true,
      "parse_location": PiParseLocation {
        "column": 9,
        "line": 10,
      },
    },
  ],
  "parse_location": PiParseLocation {
    "column": 1,
    "line": 1,
  },
}
`;

exports[`Parser properties of type  Ref  1`] = `
RefsTest {
  "$$owner": TestParserModel {
    "$$owner": null,
    "$$propertyIndex": undefined,
    "$$propertyName": "",
    "$id": "ID-1",
    "$typename": "TestParserModel",
    "_PI_lim": null,
    "_PI_parts": null,
    "_PI_prim": null,
    "_PI_primWith": null,
    "_PI_ref": [Circular],
  },
  "$$propertyIndex": undefined,
  "$$propertyName": "ref",
  "$id": "ID-9",
  "$typename": "RefsTest",
  "_PI_directRefs": WithDirectRefs {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "directRefs",
    "$id": "ID-2",
    "$typename": "WithDirectRefs",
    "_PI_optRefList": Array [],
    "_PI_ref": PiElementReference {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "ref",
      "_PI_pathname": Array [
        "someName",
        "otherName",
        "xxx",
        "yyy",
      ],
      "_PI_referred": null,
      "typeName": "RefConcept",
    },
    "_PI_refList": Array [
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "refList",
        "_PI_pathname": Array [
          "name1.ff.gg.yuio",
        ],
        "_PI_referred": null,
        "typeName": "RefConcept",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "refList",
        "_PI_pathname": Array [
          "name2",
        ],
        "_PI_referred": null,
        "typeName": "RefConcept",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 2,
        "$$propertyName": "refList",
        "_PI_pathname": Array [
          "name3",
        ],
        "_PI_referred": null,
        "typeName": "RefConcept",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 3,
        "$$propertyName": "refList",
        "_PI_pathname": Array [
          "name4",
        ],
        "_PI_referred": null,
        "typeName": "RefConcept",
      },
    ],
    "parse_location": PiParseLocation {
      "column": 13,
      "line": 2,
    },
  },
  "_PI_indirectRefs": null,
  "_PI_name": "myName",
  "_PI_withSeparator": RefsWithSeparator {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "withSeparator",
    "$id": "ID-8",
    "$typename": "RefsWithSeparator",
    "_PI_optList": Array [
      WithDirectRefs {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "optList",
        "$id": "ID-5",
        "$typename": "WithDirectRefs",
        "_PI_optRefList": Array [],
        "_PI_ref": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "ref",
          "_PI_pathname": Array [
            "someName",
            "otherName",
            "xxx",
            "yyy",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        "_PI_refList": Array [
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name1.ff.gg.yuio",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name2",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
        ],
        "parse_location": PiParseLocation {
          "column": 21,
          "line": 31,
        },
      },
      WithDirectRefs {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "optList",
        "$id": "ID-6",
        "$typename": "WithDirectRefs",
        "_PI_optRefList": Array [],
        "_PI_ref": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "ref",
          "_PI_pathname": Array [
            "someName",
            "otherName",
            "xxx",
            "yyy",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        "_PI_refList": Array [
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name1.ff.gg.yuio",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name2",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
        ],
        "parse_location": PiParseLocation {
          "column": 21,
          "line": 39,
        },
      },
      WithDirectRefs {
        "$$owner": [Circular],
        "$$propertyIndex": 2,
        "$$propertyName": "optList",
        "$id": "ID-7",
        "$typename": "WithDirectRefs",
        "_PI_optRefList": Array [],
        "_PI_ref": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "ref",
          "_PI_pathname": Array [
            "someName",
            "otherName",
            "xxx",
            "yyy",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        "_PI_refList": Array [
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name1.ff.gg.yuio",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name2",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
        ],
        "parse_location": PiParseLocation {
          "column": 21,
          "line": 47,
        },
      },
    ],
    "_PI_partList": Array [
      WithDirectRefs {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "partList",
        "$id": "ID-3",
        "$typename": "WithDirectRefs",
        "_PI_optRefList": Array [],
        "_PI_ref": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "ref",
          "_PI_pathname": Array [
            "someName",
            "otherName",
            "xxx",
            "yyy",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        "_PI_refList": Array [
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name1.ff.gg.yuio",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name2",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 2,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name3",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 3,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name4",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
        ],
        "parse_location": PiParseLocation {
          "column": 19,
          "line": 13,
        },
      },
      WithDirectRefs {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "partList",
        "$id": "ID-4",
        "$typename": "WithDirectRefs",
        "_PI_optRefList": Array [],
        "_PI_ref": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "ref",
          "_PI_pathname": Array [
            "someName",
            "otherName",
            "xxx",
            "yyy",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        "_PI_refList": Array [
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name1.ff.gg.yuio",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name2",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
        ],
        "parse_location": PiParseLocation {
          "column": 21,
          "line": 23,
        },
      },
    ],
    "parse_location": PiParseLocation {
      "column": 19,
      "line": 13,
    },
  },
  "parse_location": PiParseLocation {
    "column": 1,
    "line": 1,
  },
}
`;

exports[`Parser properties of type  Ref with Optionals present 1`] = `
RefsTest {
  "$$owner": TestParserModel {
    "$$owner": null,
    "$$propertyIndex": undefined,
    "$$propertyName": "",
    "$id": "ID-1",
    "$typename": "TestParserModel",
    "_PI_lim": null,
    "_PI_parts": null,
    "_PI_prim": null,
    "_PI_primWith": null,
    "_PI_ref": [Circular],
  },
  "$$propertyIndex": undefined,
  "$$propertyName": "ref",
  "$id": "ID-12",
  "$typename": "RefsTest",
  "_PI_directRefs": WithDirectRefs {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "directRefs",
    "$id": "ID-2",
    "$typename": "WithDirectRefs",
    "_PI_optRef": PiElementReference {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "optRef",
      "_PI_pathname": Array [
        "nameA",
      ],
      "_PI_referred": null,
      "typeName": "RefConcept",
    },
    "_PI_optRefList": Array [
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "optRefList",
        "_PI_pathname": Array [
          "nameZ",
        ],
        "_PI_referred": null,
        "typeName": "RefConcept",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "optRefList",
        "_PI_pathname": Array [
          "nameY.sdfsgargh.HERA",
        ],
        "_PI_referred": null,
        "typeName": "RefConcept",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 2,
        "$$propertyName": "optRefList",
        "_PI_pathname": Array [
          "nameX",
        ],
        "_PI_referred": null,
        "typeName": "RefConcept",
      },
    ],
    "_PI_ref": PiElementReference {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "ref",
      "_PI_pathname": Array [
        "someName",
        "x34565",
      ],
      "_PI_referred": null,
      "typeName": "RefConcept",
    },
    "_PI_refList": Array [
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "refList",
        "_PI_pathname": Array [
          "name1.d45fgh",
        ],
        "_PI_referred": null,
        "typeName": "RefConcept",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "refList",
        "_PI_pathname": Array [
          "name2",
        ],
        "_PI_referred": null,
        "typeName": "RefConcept",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 2,
        "$$propertyName": "refList",
        "_PI_pathname": Array [
          "name3",
        ],
        "_PI_referred": null,
        "typeName": "RefConcept",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 3,
        "$$propertyName": "refList",
        "_PI_pathname": Array [
          "name4",
        ],
        "_PI_referred": null,
        "typeName": "RefConcept",
      },
    ],
    "parse_location": PiParseLocation {
      "column": 13,
      "line": 2,
    },
  },
  "_PI_indirectRefs": WithSubSubRefs {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "indirectRefs",
    "$id": "ID-8",
    "$typename": "WithSubSubRefs",
    "_PI_optList": Array [
      WithDirectRefs {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "optList",
        "$id": "ID-7",
        "$typename": "WithDirectRefs",
        "_PI_optRef": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "optRef",
          "_PI_pathname": Array [
            "nameA",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        "_PI_optRefList": Array [
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "optRefList",
            "_PI_pathname": Array [
              "nameZ",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "optRefList",
            "_PI_pathname": Array [
              "nameY",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 2,
            "$$propertyName": "optRefList",
            "_PI_pathname": Array [
              "nameX",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
        ],
        "_PI_ref": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "ref",
          "_PI_pathname": Array [
            "someName",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        "_PI_refList": Array [
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name1",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name2",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 2,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name3",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 3,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name4",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
        ],
        "parse_location": PiParseLocation {
          "column": 25,
          "line": 66,
        },
      },
    ],
    "_PI_optPart": WithDirectRefs {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "optPart",
      "$id": "ID-4",
      "$typename": "WithDirectRefs",
      "_PI_optRef": PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": undefined,
        "$$propertyName": "optRef",
        "_PI_pathname": Array [
          "nameA",
        ],
        "_PI_referred": null,
        "typeName": "RefConcept",
      },
      "_PI_optRefList": Array [
        PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": 0,
          "$$propertyName": "optRefList",
          "_PI_pathname": Array [
            "nameZ",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": 1,
          "$$propertyName": "optRefList",
          "_PI_pathname": Array [
            "nameY",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": 2,
          "$$propertyName": "optRefList",
          "_PI_pathname": Array [
            "nameX",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
      ],
      "_PI_ref": PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": undefined,
        "$$propertyName": "ref",
        "_PI_pathname": Array [
          "someName",
        ],
        "_PI_referred": null,
        "typeName": "RefConcept",
      },
      "_PI_refList": Array [
        PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": 0,
          "$$propertyName": "refList",
          "_PI_pathname": Array [
            "name1",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": 1,
          "$$propertyName": "refList",
          "_PI_pathname": Array [
            "name2",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": 2,
          "$$propertyName": "refList",
          "_PI_pathname": Array [
            "name3",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": 3,
          "$$propertyName": "refList",
          "_PI_pathname": Array [
            "name4",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
      ],
      "parse_location": PiParseLocation {
        "column": 27,
        "line": 28,
      },
    },
    "_PI_part": WithDirectRefs {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "part",
      "$id": "ID-3",
      "$typename": "WithDirectRefs",
      "_PI_optRef": PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": undefined,
        "$$propertyName": "optRef",
        "_PI_pathname": Array [
          "nameA",
        ],
        "_PI_referred": null,
        "typeName": "RefConcept",
      },
      "_PI_optRefList": Array [
        PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": 0,
          "$$propertyName": "optRefList",
          "_PI_pathname": Array [
            "nameZ",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": 1,
          "$$propertyName": "optRefList",
          "_PI_pathname": Array [
            "nameY.h56",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": 2,
          "$$propertyName": "optRefList",
          "_PI_pathname": Array [
            "nameX",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
      ],
      "_PI_ref": PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": undefined,
        "$$propertyName": "ref",
        "_PI_pathname": Array [
          "someName",
        ],
        "_PI_referred": null,
        "typeName": "RefConcept",
      },
      "_PI_refList": Array [
        PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": 0,
          "$$propertyName": "refList",
          "_PI_pathname": Array [
            "name1.WREQWR.gag",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": 1,
          "$$propertyName": "refList",
          "_PI_pathname": Array [
            "name2",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": 2,
          "$$propertyName": "refList",
          "_PI_pathname": Array [
            "name3.fghy",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": 3,
          "$$propertyName": "refList",
          "_PI_pathname": Array [
            "name4",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
      ],
      "parse_location": PiParseLocation {
        "column": 24,
        "line": 15,
      },
    },
    "_PI_partList": Array [
      WithDirectRefs {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "partList",
        "$id": "ID-5",
        "$typename": "WithDirectRefs",
        "_PI_optRef": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "optRef",
          "_PI_pathname": Array [
            "nameA",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        "_PI_optRefList": Array [
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "optRefList",
            "_PI_pathname": Array [
              "nameZ",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "optRefList",
            "_PI_pathname": Array [
              "nameY",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 2,
            "$$propertyName": "optRefList",
            "_PI_pathname": Array [
              "nameX",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
        ],
        "_PI_ref": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "ref",
          "_PI_pathname": Array [
            "someName",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        "_PI_refList": Array [
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name1",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name2",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 2,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name3",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 3,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name4",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
        ],
        "parse_location": PiParseLocation {
          "column": 25,
          "line": 41,
        },
      },
      WithDirectRefs {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "partList",
        "$id": "ID-6",
        "$typename": "WithDirectRefs",
        "_PI_optRef": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "optRef",
          "_PI_pathname": Array [
            "nameA",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        "_PI_optRefList": Array [
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "optRefList",
            "_PI_pathname": Array [
              "nameZ",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "optRefList",
            "_PI_pathname": Array [
              "nameY",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 2,
            "$$propertyName": "optRefList",
            "_PI_pathname": Array [
              "nameX",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
        ],
        "_PI_ref": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "ref",
          "_PI_pathname": Array [
            "someName",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        "_PI_refList": Array [
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name1",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name2",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 2,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name3",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 3,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name4",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
        ],
        "parse_location": PiParseLocation {
          "column": 25,
          "line": 53,
        },
      },
    ],
    "parse_location": PiParseLocation {
      "column": 18,
      "line": 14,
    },
  },
  "_PI_name": "myName",
  "_PI_withSeparator": RefsWithSeparator {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "withSeparator",
    "$id": "ID-11",
    "$typename": "RefsWithSeparator",
    "_PI_optList": Array [
      WithDirectRefs {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "optList",
        "$id": "ID-9",
        "$typename": "WithDirectRefs",
        "_PI_optRef": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "optRef",
          "_PI_pathname": Array [
            "nameA",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        "_PI_optRefList": Array [
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "optRefList",
            "_PI_pathname": Array [
              "nameZ",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "optRefList",
            "_PI_pathname": Array [
              "nameY",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 2,
            "$$propertyName": "optRefList",
            "_PI_pathname": Array [
              "nameX",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
        ],
        "_PI_ref": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "ref",
          "_PI_pathname": Array [
            "someName",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        "_PI_refList": Array [
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name1",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name2",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 2,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name3",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 3,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name4",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
        ],
        "parse_location": PiParseLocation {
          "column": 25,
          "line": 80,
        },
      },
      WithDirectRefs {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "optList",
        "$id": "ID-10",
        "$typename": "WithDirectRefs",
        "_PI_optRef": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "optRef",
          "_PI_pathname": Array [
            "nameA",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        "_PI_optRefList": Array [
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "optRefList",
            "_PI_pathname": Array [
              "nameZ",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "optRefList",
            "_PI_pathname": Array [
              "nameY",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 2,
            "$$propertyName": "optRefList",
            "_PI_pathname": Array [
              "nameX",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
        ],
        "_PI_ref": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "ref",
          "_PI_pathname": Array [
            "someName",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        "_PI_refList": Array [
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name1",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name2",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 2,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name3",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 3,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name4",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
        ],
        "parse_location": PiParseLocation {
          "column": 25,
          "line": 92,
        },
      },
    ],
    "_PI_partList": Array [],
    "parse_location": PiParseLocation {
      "column": 25,
      "line": 80,
    },
  },
  "parse_location": PiParseLocation {
    "column": 1,
    "line": 1,
  },
}
`;
